# q1v-soft-node

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  GOVERNANCE.md  LEGAL  LICENSE  README.md
q1v/src/: CMakeLists.txt  CryptoNoteConfig.h
q1v/src/blockchainExplorer/: BlockchainExplorer.cpp  BlockchainExplorer.h  BlockchainExplorerDataBuilder.cpp  BlockchainExplorerDataBuilder.h  BlockchainExplorerErrors.cpp  BlockchainExplorerErrors.h
q1v/src/common/: Base58.cpp  Base58.h  Base64.cpp  Base64.h  BlockingQueue.cpp  BlockingQueue.h  CommandLine.cpp  CommandLine.h  ConsoleHandler.cpp  ConsoleHandler.h  ConsoleTools.cpp  ConsoleTools.h  DnsTools.cpp  DnsTools.h  FileMappedVector.cpp  FileMappedVector.h  IInputStream.cpp  IInputStream.h  IOutputStream.cpp  IOutputStream.h  JsonValue.cpp  JsonValue.h  Math.cpp  Math.h  MemoryInputStream.cpp  MemoryInputStream.h  ObserverManager.h  PathTools.cpp  PathTools.h  ScopeExit.cpp  ScopeExit.h  ShuffleGenerator.h  SignalHandler.cpp  SignalHandler.h  StdInputStream.cpp  StdInputStream.h  StdOutputStream.cpp  StdOutputStream.h  StreamTools.cpp  StreamTools.h  (+15 more)
q1v/src/crypto/: blake256.c  chacha8.c  chacha8.h  crypto-ops-data.c  crypto-ops.c  crypto-ops.h  crypto.cpp  crypto.h  generic-ops.h  groestl.c  groestl.h  groestl_tables.h  hash-ops.h  hash.c  hash.h  initializer.h  jh.c  jh.h  keccak.c  q1v_slow_hash.hpp  q1v_slow_hash_hard_arm.cpp  q1v_slow_hash_hard_intel.cpp  q1v_slow_hash_soft.cpp  random.c  random.h  skein.c  skein.h  skein_port.h  tree-hash.c
q1v/src/cryptoNoteCore/: Account.cpp  Account.h  BlockIndex.cpp  BlockIndex.h  Blockchain.cpp  Blockchain.h  BlockchainIndices.cpp  BlockchainIndices.h  BlockchainMessages.cpp  BlockchainMessages.h  Checkpoints.cpp  Checkpoints.h  Core.cpp  Core.h  CoreConfig.cpp  CoreConfig.h  CryptoNoteBasic.cpp  CryptoNoteBasic.h  CryptoNoteBasicImpl.cpp  CryptoNoteBasicImpl.h  CryptoNoteFormatUtils.cpp  CryptoNoteFormatUtils.h  CryptoNoteSerialization.cpp  CryptoNoteSerialization.h  CryptoNoteStatInfo.h  CryptoNoteTools.cpp  CryptoNoteTools.h  Currency.cpp  Currency.h  Difficulty.cpp  Difficulty.h  IBlock.cpp  IBlock.h  IBlockchainStorageObserver.h  ICore.h  ICoreObserver.h  IMinerHandler.h  ITimeProvider.cpp  ITimeProvider.h  ITransactionValidator.h  (+24 more)
q1v/src/cryptoNoteProtocol/: CryptoNoteProtocolDefinitions.h  CryptoNoteProtocolHandler.cpp  CryptoNoteProtocolHandler.h  CryptoNoteProtocolHandlerCommon.h  ICryptoNoteProtocolObserver.h  ICryptoNoteProtocolQuery.h
q1v/src/daemon/: Daemon.cpp  DaemonCommandsHandler.cpp  DaemonCommandsHandler.h
q1v/src/http/: HttpParser.cpp  HttpParser.h  HttpParserErrorCodes.cpp  HttpParserErrorCodes.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
q1v/src/logging/: CommonLogger.cpp  CommonLogger.h  ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  ILogger.cpp  ILogger.h  LoggerGroup.cpp  LoggerGroup.h  LoggerManager.cpp  LoggerManager.h  (+6 more)
(+119 files in other folders)
